# suno-os

./: .dockerignore  .env.example  .eslintrc.json  .gcloudignore  .gitignore  .npmrc  CLAUDE.md  Dockerfile  Dockerfile.dev  bundle-baseline.json  cloudbuild-frontend.yaml  docker-compose.yml  eslint.config.js  firebase.json  index.html  next.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.ts
api/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  cloudbuild.yaml  config.py  main.py  pyproject.toml
api/admin/: db.py  repository.py  router.py
api/agents/: graph.py  memory.py  preview.py  repository.py  router.py  runner.py  scheduler.py  schemas.py  skill_loader.py
api/approval/: __init__.py  models.py  repository.py  router.py  schemas.py
api/chat/: conversation_store.py  router.py
api/clientes/: repository.py
api/core/: auth.py  db.py  firebase.py  observability.py  retry.py
api/drive/: __init__.py  client_drive.py  google_drive.py  ingest.py  router.py
api/migrations/: 000_base.sql  001_knowledge_tables.sql  002_workflow_tables.sql  003_workflow_canvas_v2.sql  004_add_messages_to_conversations.sql  005_drive_tokens.sql  005_onboarding_wiki.sql  007_approval_submissions.sql  008_meetings.sql  009_admin_panel.sql  010_agents.sql  011_clients_table.sql  011_users.sql  011_users_seed_dev.sql  012_clients_extend.sql  013_notifications.sql  014_onboarding_fixes.sql  015_agents_portable.sql  016_workflows_portable.sql  017_skill_defaults.sql  018_skills.sql  019_clients_drive_folder.sql  check_grants.sql  (+3 more)
(+630 files in other folders)
