[project]
name = "sunos-api"
version = "0.1.0"
description = "sunOS AI Backend — FastAPI + LangGraph multi-agent system for creative tools"
requires-python = ">=3.11"
dependencies = [
    # FastAPI & Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # LangGraph & LangChain
    "langgraph>=0.4.1",
    "langchain-core>=0.3.40",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.12",
    "langchain-anthropic>=0.3.15",
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.30.0",
    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # ML Observability
    "mlflow>=2.10.0",
    # GCP
    "google-cloud-aiplatform>=1.52.0",
    "google-cloud-secret-manager>=2.16.0",
    # Auth
    "firebase-admin>=6.2.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["chat", "models", "core", "config.py", "main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
